fixed popup width on mobile screen

--- a/day2/style.css
+++ b/day2/style.css
@@ -33,6 +33,8 @@ body {
    
 }
 
+
+
 .party-info p{
 	font-family: 'Josefin Sans';
 	text-align: center;
@@ -108,6 +110,11 @@ input[type=radio] {
 	
 }
 
+@media only screen and (max-width: 500px) {
+.modal-content {
+   	width: 90%;
+   }
+}
 
 /*@media only screen and (max-width: 500px) {
    .box p {
